--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,26 +4,26 @@ disqus:
   disqus_shortname: 'https-lenpaul-github-io-lagrange'
 
 # If you are not using Google Analytics, please change 'google-ID' to an empty string
-google-ID: 'UA-112060364-1'
+google-ID: ''
 
 menu:
-- {name: 'About',   url: 'about.html'}
-- {name: 'Writing', url: 'writing.html'}
-- {name: 'Contact', url: 'contact.html'}
+- {name: '阅读空间',   url: 'about.html'}
+- {name: '读写听', url: 'writing.html'}
+- {name: '联系我', url: 'contact.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'github',     link: 'https://www.github.com/lenpaul'}
-- {icon: 'twitter',    link: 'https://twitter.com/paululele'}
-- {icon: 'linkedin',   link: 'http://www.linkedin.com/in/lenpaul/'}
-- {icon: 'envelope',   link: 'mailto:l.nguyen.paul@gmail.com'}
-- {icon: 'rss-square', link: '/feed.xml'}
+- {icon: 'github',     link: 'https://www.github.com/'}
+# - {icon: 'twitter',    link: 'https://twitter.com/paululele'}
+# - {icon: 'linkedin',   link: 'http://www.linkedin.com/in/lenpaul/'}
+# - {icon: 'envelope',   link: 'mailto:l.nguyen.paul@gmail.com'}
+# - {icon: 'rss-square', link: '/feed.xml'}
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
 
 # Customize site text
 pagination:
-  next_page: 'Newer'
-  previous_page: 'Older'
+  next_page: '过往'
+  previous_page: '未来'
 
 sharing_button_prompt: 'Feel free to share!'
 
