--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ theme: jekyll-theme-minimal
 #   sort_reverse: true
 
 # jekyll-paginate configuration
-paginate:            5
+paginate:            6
 
 # Build settings
 markdown:            kramdown
@@ -21,9 +21,9 @@ permalink:           /:title
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           'Lagrange'
-description:	       'a minimalist Jekyll theme'
-author:              'Paul Le'
+title:		           '意昂空间'
+description:	       '有乐 有趣 有闲 有感'
+author:              'ken bai'
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
